test/library/packages/ZMQ/not-serializable.good
not-serializable.chpl:20: error: Type "Foo" is not serializable by ZMQ
